# coursework

./: .gitignore  README.md  pyproject.toml  Запустить интерфейс.bat
examples/: level1_asyncio.py  run_local.py
experiments/: README.md  bench.py  reliability.py
experiments/load/: locustfile.py
gui/: index.html  server.py
src/common/: config.py  idempotency.py  messages.py  observability.py  outbox.py  work.py
src/common/broker/: __init__.py  base.py  in_memory.py  rabbitmq.py
src/coordinator/: __main__.py  saga.py  state.py
src/gateway/: __main__.py  app.py
src/query_service/: __main__.py  app.py  projection.py
src/worker_finalize/: __main__.py  worker.py
src/worker_process/: __main__.py  worker.py
src/worker_validate/: __main__.py  worker.py
tests/: conftest.py  test_broker.py  test_gateway_e2e.py  test_idempotency.py  test_messages.py  test_outbox.py  test_saga.py
