[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-microservices-uir"
version = "0.1.0"
description = "Демонстрационный стенд асинхронных процессов в микросервисных системах (курсовая работа)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Student" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",            # HTTP-клиент для синхронного baseline
    "structlog>=24.1",        # структурированное логирование
    "prometheus-client>=0.20", # метрики
]

[project.optional-dependencies]
# Опциональный уровень 3 — распределённый режим на RabbitMQ. По решению о scope
# («без Docker») клиент RabbitMQ вынесен в extra: для запуска и тестирования ядра
# (режим A) он не требуется. Устанавливается явно: pip install -e ".[rabbitmq]".
rabbitmq = [
    "aio-pika>=9.4",          # асинхронный клиент RabbitMQ (AMQP 0-9-1)
]
# Будущие SQL-реализации Outbox/Inbox (направление дальнейшего развития).
sql = [
    "asyncpg>=0.29",          # асинхронный драйвер PostgreSQL
    "sqlalchemy[asyncio]>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]
load = [
    "locust>=2.25",           # нагрузочное тестирование (эксперимент sync vs async)
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/gateway",
    "src/coordinator",
    "src/worker_validate",
    "src/worker_process",
    "src/worker_finalize",
    "src/query_service",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
# Проект ведётся на русском языке: кириллица в строках, докстрингах и комментариях —
# намеренная. Отключаем правила «неоднозначных Unicode-символов», иначе линтер
# захлёбывается ложными срабатываниями на кириллических буквах.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
